<resources>
    <string name="accessibility_keyboard_haptics_title">Keyboard haptics</string>
    <string name="accessibility_screen_magnifier_summary">Use your camera to enlarge details around you</string>
    <string name="accessibility_screen_magnifier_title">Magnifier</string>
    <string name="account_confirmation_class">com.google.android.gms.auth.uiflows.factoryreset.PreFactoryResetActivity</string>
    <string name="account_confirmation_package">com.google.android.gms</string>
    <string name="account_type">com.google</string>
    <string name="adaptive_alert_vibration_summary">Reduces vibration strength while your phone is still and the screen is facing up</string>
    <string name="adaptive_alert_vibration_title">Adaptive alert vibration</string>
    <string name="adaptive_battery_switch_des">To extend battery life, Adaptive Battery may reduce performance and background activity. Some notifications may be delayed.</string>
    <string name="adaptive_battery_switch_title">Use Adaptive Battery</string>
    <string name="adaptive_charging">Adaptive Charging</string>
    <string name="adaptive_charging_description">Extend battery lifespan by charging steadily during longer charging periods. Activated based on your usage cycle.</string>
    <string name="adaptive_charging_footer">To help extend battery lifespan, your phone learns your charging routine and waits until you need it to fully charge.</string>
    <string name="adaptive_charging_link_a11y">Learn more about Adaptive Charging</string>
    <string name="adaptive_charging_main_switch_title">Use Adaptive Charging</string>
    <string name="adaptive_charging_time_estimate"><b>Adaptive Charging</b> • Full by %1$s</string>
    <string name="adaptive_charging_title">Adaptive Charging</string>
    <string name="adaptive_touch_sensitivity_summary">Touch sensitivity will automatically adjust to your environment, activities and screen protector</string>
    <string name="adaptive_touch_sensitivity_title">Adaptive touch</string>
    <string name="add_bypassed_application_hint">No apps added</string>
    <string name="advanced_vpn_preference_group_title">Built-in</string>
    <string name="all_apps_category_title">All apps</string>
    <string name="allow_debugging_data_description">Google uses bug reports to diagnose app and device issues in accordance with our <a href="https://policies.google.com/privacy">Privacy Policy</a>".

"<b>Bug reports contain app and system logs</b>" and may include personal and device information, such as names, email addresses, phone numbers, location data, device identifiers, connected devices, and network information. Reports may be shared with engineering partners potentially impacted by your issue.

Granting access will allow this app to "<b>automatically collect and upload bug reports</b>", including app and system logs from personal and work profiles, for all issue reports you submit.

Revoking access will require the app to request your permission to collect and upload a bug report for each individual issue report."</string>
    <string name="app_and_notification_dashboard_summary">Assistant, recent apps, default apps</string>
    <string name="audio_sharing_switch_title">Share audio</string>
    <string name="audio_sharing_title">Audio sharing</string>
    <string name="audio_streams_category_title">Connect to a LE audio stream</string>
    <string name="audio_streams_connect">Connect</string>
    <string name="audio_streams_disconnect">Disconnect</string>
    <string name="audio_streams_pref_title">Nearby audio streams</string>
    <string name="audio_streams_qr_code_is_not_valid_format">"QR code isn't a valid format"</string>
    <string name="audio_streams_qr_code_scanner">To start listening, center the QR code below</string>
    <string name="audio_streams_qr_code_summary">Connect to an audio stream using QR code</string>
    <string name="audio_streams_title">Audio streams</string>
    <string name="automatic_storage_manager_activation_warning">"When you're connected, you can still access photos and videos at the quality you selected for backup"</string>
    <string name="automatic_storage_manager_days_title">Remove backed up photos &amp; videos</string>
    <string name="automatic_storage_manager_deactivation_warning">"Turn off Smart Storage? 

Smart Storage won't free up space when your storage is almost full."</string>
    <string name="automatic_storage_manager_preference_title">Smart Storage</string>
    <string name="automatic_storage_manager_primary_switch_title">Use Smart Storage</string>
    <string name="automatic_storage_manager_settings">Smart Storage</string>
    <string name="automatic_storage_manager_text">When storage is almost full, remove backed up photos and videos. You can still find them in Google Photos.</string>
    <string name="backup_data_summary">Back up app data, Wi-Fi passwords, and other settings to Google servers</string>
    <string name="basic_battery_saver_summary">Limits visual effects and background activity. Turns on Dark theme, if not already on.</string>
    <string name="basic_battery_saver_title">Standard Battery Saver</string>
    <string name="battery_manager_summary">Extend battery life and optimize charging</string>
    <string name="battery_manager_summary_unsupported">Extend battery life</string>
    <string name="battery_missing_link_message">Learn more</string>
    <string name="battery_saver_reminder_category">Reminders</string>
    <string name="battery_saver_reminder_switch_summary">Get reminders when battery is low</string>
    <string name="battery_saver_reminder_switch_title">Battery Saver reminders</string>
    <string name="battery_saver_schedule_category">Schedule</string>
    <string name="battery_saver_schedule_switch_summary">Battery Saver turns on when battery falls to a level you set</string>
    <string name="battery_saver_schedule_switch_title">Turn on based on battery level</string>
    <string name="battery_schedule_summary">Manage when Battery Saver turns on</string>
    <string name="battery_schedule_title">Schedule and reminders</string>
    <string name="battery_tip_battery_health_learn_more_description">Learn more about battery health</string>
    <string name="battery_tip_battery_health_reduced_title">Battery capacity is reduced</string>
    <string name="battery_tip_battery_health_unknown_title">Can’t detect battery health</string>
    <string name="battery_tip_dock_defender_active_summary">To help extend battery lifespan, charging is on hold at 90% while your tablet is docked</string>
    <string name="battery_tip_dock_defender_active_title">Charging on hold to protect battery</string>
    <string name="battery_tip_dock_defender_button_learn_more">Learn more</string>
    <string name="battery_tip_dock_defender_button_override">Override</string>
    <string name="battery_tip_dock_defender_future_bypass_summary">To help extend battery lifespan, charging will be put on hold at 90% while your tablet was docked</string>
    <string name="battery_tip_dock_defender_future_bypass_title">Charging to 90%</string>
    <string name="battery_tip_dock_defender_temporarily_bypass_summary">The next time your tablet is docked, charging will be put on hold at 90% to protect the battery</string>
    <string name="battery_tip_dock_defender_temporarily_bypass_title">Charging to full</string>
    <string name="battery_tip_limited_temporarily_extra_summary">To protect your battery, charging is paused at %1$s while your tablet is docked</string>
    <string name="battery_tip_smart_battery_summary">Turn on Adaptive Battery</string>
    <string name="battery_tip_wireless_charging_learn_more_description">Learn more about wireless charging</string>
    <string name="battery_tip_wireless_charging_summary">Charging your phone wirelessly may use more energy than other charging methods</string>
    <string name="battery_tip_wireless_charging_title">Wirelessly charging</string>
    <string name="calls_and_alarms_device_title">Calls and alarms</string>
    <string name="clear_calling_footer">"To protect your privacy, Clear Calling does not send audio or conversations to Google.

Clear Calling works on Wi‑Fi calling and most networks, not available for 3G networks."</string>
    <string name="clear_calling_footer_learn_more_link">https://support.google.com/pixelphone?p=clear_calling</string>
    <string name="clear_calling_title">Clear Calling</string>
    <string name="clear_calling_toggle">Use Clear Calling</string>
    <string name="clear_calling_topintro">Reduces background noises during calls</string>
    <string name="columbus_gesture_detected">Quick Tap detected!</string>
    <string name="columbus_gesture_enrollment_complete">Done</string>
    <string name="columbus_gesture_enrollment_do_it_later">Not now</string>
    <string name="columbus_gesture_enrollment_settings">Go to Settings</string>
    <string name="columbus_gesture_enrollment_try_it">Try it</string>
    <string name="columbus_gesture_training_action_no_selection_error">Please select an action to perform</string>
    <string name="columbus_gesture_training_action_text">Select what happens when you use Quick Tap. You can change this later in settings.</string>
    <string name="columbus_gesture_training_action_title">Choose Quick Tap option</string>
    <string name="columbus_gesture_training_enrolling_first_gesture">… Double-tap 1 out of 2 detected</string>
    <string name="columbus_gesture_training_enrolling_first_gesture_text">Let’s try that once more. Quickly tap the back of your phone twice.</string>
    <string name="columbus_gesture_training_enrolling_first_gesture_title">Nice!</string>
    <string name="columbus_gesture_training_enrolling_second_gesture">… Double-tap 2 out of 2 detected</string>
    <string name="columbus_gesture_training_enrolling_second_gesture_text">You’re ready to start using Quick Tap</string>
    <string name="columbus_gesture_training_enrolling_second_gesture_title">You got it!</string>
    <string name="columbus_gesture_training_enrolling_text">Quickly tap the back of your phone twice.</string>
    <string name="columbus_gesture_training_enrolling_title">Try Quick Tap</string>
    <string name="columbus_gesture_training_finished_text">To change the tap strength needed to use Quick Tap, go to Settings.</string>
    <string name="columbus_gesture_training_finished_title">You’ve set up Quick Tap</string>
    <string name="columbus_gesture_training_intro_text_accidental">You‘ve just tapped twice on the back of your device, which allows you to use your Assistant on the go. You can customize this gesture in settings.</string>
    <string name="columbus_gesture_training_intro_text_suw">Take a screenshot, show notifications, or start another action in two taps.</string>
    <string name="columbus_gesture_training_intro_title">Quick Tap for quick actions</string>
    <string name="columbus_gesture_training_launch_no_selection_error">Please select an app to open</string>
    <string name="columbus_gesture_training_launch_text">Select the app you’d like to open when you use Quick Tap.</string>
    <string name="columbus_gesture_training_launch_title">Choose app to open</string>
    <string name="columbus_launch_app_extra_widget_a11y_label">%1$s shortcut settings</string>
    <string name="columbus_launch_settings_activity_title">Quick Tap settings</string>
    <string name="face_confirmation_info_enough_light">Face Unlock works best when there’s enough light and you’re not wearing a mask or dark glasses.</string>
    <string name="face_confirmation_info_outside_screen">Face Unlock works from the outside screen only</string>
    <string name="security_settings_face_enroll_introduction_info_title">Keep in mind</string>
    <string name="setup_fingerprint_enroll_immobile_help_continue"/>
    <string name="setup_fingerprint_enroll_immobile_help_subtitle"/>
    <string name="setup_fingerprint_enroll_immobile_help_title"/>
</resources>